Adjusts spacing on header1 to prevent unusual display if nav menu is removed on pages.

--- a/stylesheets/modules/page-header1/page-header.less
+++ b/stylesheets/modules/page-header1/page-header.less
@@ -11,9 +11,6 @@
 #header1 {
 	background-color: @header1-bg-color;
     border-bottom: @header1-border-bottom-size solid @header1-border-bottom-color;
-    @media only screen and (min-width: 992px) {
-		padding-bottom: 20px;
-    }
     .header-content {
     	height: @header1-height;
     	@media only screen and (max-width: 767px) {
